--- a/style.css
+++ b/style.css
@@ -488,7 +488,7 @@ body {
   border: 1px solid #d4af37;
   border-radius: 6px;
   font-size: 1em;
-  color: #d4af37;
+  color: black;
   resize: vertical;
 }
 
